ich habe nun ein ein gute Trennung der Model und des Interface, ich habe eine grund mutation und eine erste Poblation, nun muss ich Recombination benutzen und selection

--- a/sudokuConsole/sudokuConsole/sudokuConsole.csproj
+++ b/sudokuConsole/sudokuConsole/sudokuConsole.csproj
@@ -45,7 +45,13 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sudoku.cs" />
+    <Compile Include="SudokuAlt.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\sudokuGUI\sudokuGUI\sudokuGUI.csproj">
+      <Project>{6ACA4701-F44C-4F2C-8CE0-C32E52596C02}</Project>
+      <Name>sudokuGUI</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
